# wise

./: .gitignore  main.py  pyproject.toml  wise.db
docs/: designdoc.md  requirements.md  task_planning.md
docs/research/: auth_bq.md
docs/tasks/: phase0_1.md  phase0_2.md  phase0_3.md  phase1_1.md  phase1_2.md  phase2_1.md  phase2_2.md  phase2_3.md  phase3_1.md  phase4_1_2.md  phase5_1.md
scripts/: db_maint.py  run_gemini_prompt.py  verify_db.py
tests/: test_chat_commands.py  test_llm_base.py  test_metadata_manager.py
wise/: __init__.py  cli.py
wise/analysis/: __init__.py  runner.py
wise/auth/: __init__.py  google.py
wise/bq/: __init__.py  client.py
wise/chat/: __init__.py  commands.py  session.py
wise/datastore/: __init__.py  files.py
wise/db/: __init__.py  models.py
wise/llm/: __init__.py  analysis.py  base.py  sql.py  visualize.py
wise/metadata/: __init__.py  manager.py
wise/visualization/: plot.py
