[project]
name = "wise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.scripts]
wise = "wise.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
